alignment fixes

--- a/src/styles/main/About.css
+++ b/src/styles/main/About.css
@@ -60,6 +60,10 @@
     font-family: Louis George Cafe;
 }
 
+.about ul {
+    padding-inline-start: 20px;
+}
+
 @media(max-width: 1600px) {
     .image-div img {
         width: 20vw;
@@ -100,11 +104,12 @@
     .company-story {
         width:96%;
         margin: 0 2vw;
+        text-align: left;
         justify-content: center;
     }
     .juan-story {
         width: 96%;
-        margin: 10vh 5vw 0 5vw;
+        margin: 10vh 2vw 0 2vw;
     }
     .image-div img {
         width: 50vw;
